--- a/environment.yml
+++ b/environment.yml
@@ -4,7 +4,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - jupyter-book
+  - jupyter-book=0.12
   # - pip
   # - pip:
   #   - sphinx-inline-tabs
