--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,9 +5,10 @@
 
 #######################################################################################
 # Book settings
-title                       : NCU Open Science 
+title                       : Open Science Practices in Remote Sensing
 author                      : Whyjay Zheng (鄭懷傑)
 copyright                   : "2023"
+logo                        : csrsr_logo.png
 
 # #######################################################################################
 # # Execution settings
@@ -39,23 +40,23 @@ copyright                   : "2023"
 #   myst_url_schemes: [mailto, http, https] # URI schemes that will be recognised as external URLs in Markdown links
 #   myst_dmath_double_inline: true  # Allow display math ($$) within an inline context
 
-# #######################################################################################
-# # HTML-specific settings
-# html:
-#   favicon                   : ""  # A path to a favicon image
-#   use_edit_page_button      : false  # Whether to add an "edit this page" button to pages. If `true`, repository information in repository: must be filled in
-#   use_repository_button     : false  # Whether to add a link to your repository button
-#   use_issues_button         : false  # Whether to add an "open an issue" button
-#   use_multitoc_numbering    : true   # Continuous numbering across parts/chapters
-#   extra_navbar              : Powered by <a href="https://jupyterbook.org">Jupyter Book</a>  # Will be displayed underneath the left navbar.
-#   extra_footer              : ""  # Will be displayed underneath the footer.
-#   google_analytics_id       : ""  # A GA id that can be used to track book views.
-#   home_page_in_navbar       : true  # Whether to include your home page in the left Navigation Bar
-#   baseurl                   : ""  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
-#   comments:
-#     hypothesis              : false
-#     utterances              : false
-#   announcement              : "" # A banner announcement at the top of the site.
+#######################################################################################
+# HTML-specific settings
+html:
+  # favicon                   : ""  # A path to a favicon image
+  # use_edit_page_button      : false  # Whether to add an "edit this page" button to pages. If `true`, repository information in repository: must be filled in
+  # use_repository_button     : false  # Whether to add a link to your repository button
+  # use_issues_button         : false  # Whether to add an "open an issue" button
+  # use_multitoc_numbering    : true   # Continuous numbering across parts/chapters
+  # extra_navbar              : Powered by <a href="https://jupyterbook.org">Jupyter Book</a>  # Will be displayed underneath the left navbar.
+  # extra_footer              : ""  # Will be displayed underneath the footer.
+  # google_analytics_id       : ""  # A GA id that can be used to track book views.
+  home_page_in_navbar       : false  # Whether to include your home page in the left Navigation Bar
+  # baseurl                   : ""  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
+  # comments:
+  #   hypothesis              : false
+  #   utterances              : false
+  # announcement              : "" # A banner announcement at the top of the site.
 
 # #######################################################################################
 # # LaTeX-specific settings
