Add basic content 3

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,8 +1,11 @@
 format: jb-book
 root: index
-# parts:
-# - caption: Syllabus
-#   numbered: true
-chapters:
-- file: syllabus
-- file: project
+parts:
+  - caption: Overview
+    chapters:
+    - file: syllabus
+    - file: project
+    
+  # - caption: Lectures
+  #   chapters:
+  #   - file: checkin
