--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -9,6 +9,7 @@ parts:
   - caption: Lectures
     chapters:
     - file: lectures/L1-intro
+    - file: lectures/L2-opendata
     
   - caption: ⌨️ Hands-on sessions
     chapters:
