--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -18,3 +18,4 @@ parts:
     - file: handson/H1-Jupyter
     - file: handson/H2-FAIRdata
     - file: handson/H3-Reproducibility
+    - file: handson/H4-Narrative
