--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@
 # Book settings
 title                       : Open Science Practices in Remote Sensing
 author                      : Whyjay Zheng (鄭懷傑)
-copyright                   : "2023"
+copyright                   : "2023-2024"
 logo                        : csrsr_logo.png
 
 # #######################################################################################
