--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -10,18 +10,18 @@ parts:
   - caption: Lectures
     chapters:
     - file: lectures/L1-intro
-    - file: lectures/L2-opendata
-    - file: lectures/L3-openaccess
-    - file: lectures/L4-reproducibility
-    - file: lectures/L5-communication
-    - file: lectures/L6-wheresdata
-    - file: lectures/L7-future
+    # - file: lectures/L2-opendata
+    # - file: lectures/L3-openaccess
+    # - file: lectures/L4-reproducibility
+    # - file: lectures/L5-communication
+    # - file: lectures/L6-wheresdata
+    # - file: lectures/L7-future
     
   - caption: ⌨️ Hands-on sessions
     chapters:
-    - file: handson/H1-Jupyter
-    - file: handson/H2-FAIRdata
-    - file: handson/H3-Reproducibility
-    - file: handson/H4-Narrative
-    - file: handson/H5-Visualization
-    - file: handson/H6-DataAccess
+    # - file: handson/H1-Jupyter
+    # - file: handson/H2-FAIRdata
+    # - file: handson/H3-Reproducibility
+    # - file: handson/H4-Narrative
+    # - file: handson/H5-Visualization
+    # - file: handson/H6-DataAccess
