--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -17,8 +17,8 @@ parts:
     # - file: lectures/L6-wheresdata
     # - file: lectures/L7-future
     
-  - caption: ⌨️ Hands-on sessions
-    chapters:
+  # - caption: ⌨️ Hands-on sessions
+  #   chapters:
     # - file: handson/H1-Jupyter
     # - file: handson/H2-FAIRdata
     # - file: handson/H3-Reproducibility
