--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -20,8 +20,8 @@ parts:
   - caption: 🛠️ Hands-on sessions
     chapters:
     - file: handson/H1-Jupyter
+    - file: handson/H2-Reproducibility
     # - file: handson/H2-FAIRdata
-    # - file: handson/H3-Reproducibility
     # - file: handson/H4-Narrative
     # - file: handson/H5-Visualization
     # - file: handson/H6-DataAccess
