--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -11,7 +11,7 @@ parts:
     chapters:
     - file: lectures/L1-intro
     - file: lectures/L2-opendata
-    # - file: lectures/L3-openaccess
+    - file: lectures/L3-openaccess
     # - file: lectures/L4-reproducibility
     # - file: lectures/L5-communication
     # - file: lectures/L6-wheresdata
