--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -22,6 +22,6 @@ parts:
     - file: handson/H1-Jupyter
     - file: handson/H2-Reproducibility
     - file: handson/H3-FAIRdata
-    # - file: handson/H4-Narrative
+    - file: handson/H4-Narrative
     # - file: handson/H5-Visualization
     # - file: handson/H6-DataAccess
